crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__nested_subcommand_missing_required.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required arguments

You provided:
  repo clone

Missing:
  <url>   # Repository URL

Example usage:
  repo clone <url>

Run with --help for usage information.
