crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__no_subcommand_provided.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
/Users/amos/bearcove/figue/target/debug/deps/main-138217976bbdb088

USAGE:
    /Users/amos/bearcove/figue/target/debug/deps/main-138217976bbdb088 [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <SHELL>
            Generate shell completions.

COMMANDS:
    init
    build
