crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_named.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Error: Missing required arguments

You provided:
  connect

Missing:
  --url   # Server URL (required)

Example usage:
  connect --url <value>

Run with --help for usage information.
