crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_positional.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Error: Missing required arguments

You provided:
  init

Missing:
  <name>   # Project name (creates directory with this name)

Example usage:
  init name

Run with --help for usage information.
