crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_mixed_missing_arguments.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required fields:

Sources:
├─ cli --settings.*
└─ defaults

command.. Deploy::.. deploy
└─ environment.. production.. production

Missing:
  command::Deploy.region <String> (--region)
    Deployment region (required)

Run with --help for usage information.
