crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_with_partial_input.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required arguments

You provided:
  init myproject

Missing:
  <description>   # Project description

Example usage:
  init myproject <description>

Run with --help for usage information.
